# pro-patent

./: .gitattributes  gui.py  standardize-onedrive-enhanced.ps1  standardize-onedrive-projects.ps1
code-extractor-v2/: pyproject.toml
code-extractor-v2/.github/workflows/: ci.yml
code-extractor-v2/pytest_cache/v/cache/: lastfailed
code-extractor-v2/src/extract_code/: __init__.py  cli.py  extractor.py  parser.py  utils.py
code-extractor-v2/src/extract_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/: patent-data-schema.json
download_jpegs/: download_jpegs.py
odp-wrapper-complete/: README.md  patents.txt  requirements.txt
pro-patent/: README.md
rename-files/: 01_export_icloud_root_structure.ps1  02_build_icloud_mapping.ps1  03_validate_mapping.ps1  04_apply_mapping.ps1  apply_errors (2).txt  apply_errors (4).txt  apply_icloud_root_dirs.txt  apply_icloud_root_files.txt  apply_icloud_root_files_after.txt  apply_icloud_root_prune.txt  icloud_library_structure (2).csv  icloud_root_mapping.csv  icloud_root_mapping_after_clean.csv  icloud_root_mapping_after_dups.csv  icloud_root_mapping_after_missing.csv  icloud_root_mapping_clean (2).csv  library_proposed_mapping_icloud (2).csv  library_proposed_mapping_icloud.csv  library_structure (2).csv  step01_export.txt  step01_export_AFTER.txt  step01_export_onedrive (2).txt  step01_export_onedrive.txt  step02_build.txt  step02_build_onedrive (2).txt  step02_build_onedrive.txt  step03_validate.txt  step03_validate_onedrive (2).txt  step03_validate_onedrive.txt  step04_apply.txt  terminal_output.txt  (+3 more)
(+336 files in other folders)
