[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-code"
version = "0.2.0"
description = "Robust ChatGPT HTML/JSON code‑block extractor"
authors = [{name = "Robert M. Layne", email = "robert@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.2; platform_python_implementation != 'PyPy'",
]

[project.scripts]
extract-code = "extract_code.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 99
select = ["F", "E", "W", "I", "UP", "B", "A", "C4"]

[tool.mypy]
strict = true
plugins = []

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "missing-module-docstring",
  "too-few-public-methods",
]
